--- a/index.html
+++ b/index.html
@@ -303,11 +303,7 @@ Infrastructure<br>
     <br>
     <label style="width:49%">Ground water pollution:</label>
     <input type="text" id="txtgroundwater" name="txtgroundwater" style="width:20%">
-    <input type="text" id="txtgroundwaterPercentage" name="txtgroundwaterPercentage" style="width:20%"> %
-    <br>
-    <br>
-    <button type="button" id="btnenvvalue" style="background-color: cornsilk;width:50%">Enviroment</button>
-    <input type="text" id="envvalue" name="envvalue" style="width:40%"> %
+    <input type="text" id="txtgroundwaterPercentage" name="txtgroundwaterPercentage" style="width:20%"> 
    </div>
    <br>
    <div name="Value">
@@ -321,6 +317,8 @@ Infrastructure<br>
     <label style="width:50%">Durability:</label><input type="text" id="durability" name="Durability" style="width:50%">
     <br>
     <br>
+    <button type="button" id="btnenvvalue" style="background-color: cornsilk;width:50%">Enviroment</button>
+    <input type="text" id="envvalue" name="envvalue" style="width:40%"> %
     <div>
      <label style="width:50%;">Ability to construct</label><input type="text" id="txtAbConst" name="txtAbConst" style="width:50%">
      <br>
