--- a/index.html
+++ b/index.html
@@ -177,6 +177,20 @@
         <button type="button" id="btncalculateCostByExp" style="background-color: cornsilk;width:10%">Next</button>
     </div>
 </div>
+    <br>
+    <div id="SecondStep" class="container" style="background-color:oldlace">
+                        <div name="divCostSecondStep" id="divCostFirstStep">
+                            <label style="width:10%;color:green;font-weight:bold">Target Year</label>
+                            <input type="text" id="txtCostWeightF" name="txtCostWeightF" style="width:10%"> %
+                            <br>
+                            <label style="width: 10%; color: green;font-weight: bold">Constrction Time</label>
+                            <input type="text" id="txtinitialcostF" name="txtinitialcostF" style="width:10%"> $/m
+                            <br>
+                            <label style="width: 10%; color: green;font-weight: bold">Time weight</label>
+                            <input type="text" id="txtConstructionCostF" name="txtConstructionCostF" style="width:10%"> $/m
+                            <button type="button" id="btncalculateCostByExp" style="background-color: cornsilk;width:10%">Next</button>
+                        </div>
+                    </div>
         <div id="divmain" b-0r8dmesa67="" class="container" style="visibility:hidden">
             <main b-0r8dmesa67="" role="main" class="pb-3">
                 <table>
