--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                             <button type="button" id="btncalculateCostByExp" style="background-color: cornsilk;width:10%">Next</button>
                         </div>
                     </div>
-        <div id="divmain" b-0r8dmesa67="" class="container" style="visibility:hidden">
+        <div id="divmain" b-0r8dmesa67="" class="container" style="visibility:hidden;background-color:oldlace"">
             <main b-0r8dmesa67="" role="main" class="pb-3">
                 <table>
                     <tbody>
