--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
     </div>
 </div>
     <br>
-    <div id="SecondStep" class="container" style="background-color:oldlace">
+    <div id="SecondStep" class="container">
+       <div style="background-color:oldlace" >
                         <div name="divCostSecondStep" id="divCostFirstStep">
                             <label style="width:10%;color:green;font-weight:bold">Target Year</label>
                             <input type="text" id="txtCostWeightF" name="txtCostWeightF" style="width:10%"> %
@@ -394,6 +395,7 @@
                 </div>
 
             </main>
+        </div>
         </div>
         <footer b-0r8dmesa67="" class="border-top footer text-muted">
             <div b-0r8dmesa67="" class="container">
