--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
         <br>
         <label style="width: 10%;color: green;font-weight: bold">Maintaince</label>
         <input type="text" id="txtMaintanaceCostF" name="txtMaintanaceCostF" style="width:10%"> $/m
+        <br>
+        <label style="width: 10%;color: green;font-weight: bold">cost weight</label>
+        <input type="text" id="txtCostWeightF" name="txtCostWeightF" style="width:10%"> $/m
     </div>
 </div>
     <br>
