--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </label>
         <br>
         <label style="width:10%;color:green;font-weight:bold">Initial Cost</label>
-        <input type="text" id="txtCostWeightF" name="txtCostWeightF" style="width:10%"> %
+        <input type="text" id="txtCostWeightF" name="txtCostWeightF" style="width:10%" pattern="[0-9]+> %
         <br>
         <label style="width: 10%; color: green;font-weight: bold">Construction</label>
         <input type="text" id="txtConstructionCostF" name="txtConstructionCostF" style="width:10%"> $/m
