--- a/index.html
+++ b/index.html
@@ -164,16 +164,16 @@
         </label>
         <br>
         <label style="width:10%;color:green;font-weight:bold">Initial Cost</label>
-        <input type="number" id="txtCostWeightF" name="txtCostWeightF" style="width:10%"> %
+        <input type="number" id="txtCostWeightF" name="txtCostWeightF" style="width:10%" min="0" max="10"> %
         <br>
         <label style="width: 10%; color: green;font-weight: bold">Construction</label>
-        <input type="text" id="txtConstructionCostF" name="txtConstructionCostF" style="width:10%"> $/m
+        <input type="number" id="txtConstructionCostF" name="txtConstructionCostF" style="width:10%" min="0" max="10"> $/m
         <br>
         <label style="width: 10%;color: green;font-weight: bold">Maintaince</label>
-        <input type="text" id="txtMaintanaceCostF" name="txtMaintanaceCostF" style="width:10%"> $/m
+        <input type="number" id="txtMaintanaceCostF" name="txtMaintanaceCostF" style="width:10%" min="0" max="10"> $/m
         <br>
         <label style="width: 10%;color: green;font-weight: bold">cost weight</label>
-        <input type="text" id="txtCostWeightF" name="txtCostWeightF" style="width:10%"> $/m
+        <input type="number" id="txtCostWeightF" name="txtCostWeightF" style="width:10%" min="0" max="10"> $/m
     </div>
 </div>
     <br>
