--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
         <input type="number" id="txtCostWeightF" name="txtCostWeightF" style="width:10%" min="0" max="10"> %
         <br>
         <label style="width: 10%; color: green;font-weight: bold">Construction</label>
-        <input type="number" id="txtConstructionCostF" name="txtConstructionCostF" style="width:10%" min="0" max="10"> $/m
+        <input type="number" id="txtConstructionCostF" name="txtConstructionCostF" style="width:10%"> $/m
         <br>
         <label style="width: 10%;color: green;font-weight: bold">Maintaince</label>
-        <input type="number" id="txtMaintanaceCostF" name="txtMaintanaceCostF" style="width:10%" min="0" max="10"> $/m
+        <input type="number" id="txtMaintanaceCostF" name="txtMaintanaceCostF" style="width:10%"> $/m
         <br>
         <label style="width: 10%;color: green;font-weight: bold">cost weight</label>
-        <input type="number" id="txtCostWeightF" name="txtCostWeightF" style="width:10%" min="0" max="10"> $/m
+        <input type="number" id="txtCostWeightF" name="txtCostWeightF" style="width:10%"  disabled> $/m
     </div>
 </div>
     <br>
