--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
        <div style="background-color:oldlace" >
                         <div name="divCostSecondStep" id="divCostFirstStep">
                             <label style="width:10%;color:green;font-weight:bold">Target Year</label>
-                            <input type="text" id="txtCostWeightF" name="txtCostWeightF" style="width:10%"> %
+                            <input type="number" id="txtCostWeightF" name="txtCostWeightF" style="width:10%"> %
                             <br>
                             <label style="width: 10%; color: green;font-weight: bold">Constrction Time</label>
-                            <input type="text" id="txtinitialcostF" name="txtinitialcostF" style="width:10%"> $/m
+                            <input type="number" id="txtinitialcostF" name="txtinitialcostF" style="width:10%"> $/m
                             <br>
                             <label style="width: 10%; color: green;font-weight: bold">Time weight</label>
-                            <input type="text" id="txtConstructionCostF" name="txtConstructionCostF" style="width:10%"> $/m
+                            <input type="number" id="txtConstructionCostF" name="txtConstructionCostF" style="width:10%"> $/m
                             <button type="button" id="btncalculateCostByExp" style="background-color: cornsilk;width:10%">Next</button>
                         </div>
                     </div>
