--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <input type="number" id="txtCostWeightF" name="txtCostWeightF" style="width:10%" min="0" max="10"> %
         <br>
         <label style="width: 10%; color: green;font-weight: bold">Construction</label>
-        <input type="number" id="txtConstructionCostF" name="txtConstructionCostF" style="width:10%" disabled> $/m
+        <input type="number" id="txtConstructionCostF" name="txtConstructionCostF" style="width:10%" > $/m
         <br>
         <label style="width: 10%;color: green;font-weight: bold">Maintaince</label>
         <input type="number" id="txtMaintanaceCostF" name="txtMaintanaceCostF" style="width:10%"> $/m
@@ -181,13 +181,13 @@
        <div style="background-color:oldlace" >
                         <div name="divCostSecondStep" id="divCostFirstStep">
                             <label style="width:10%;color:green;font-weight:bold">Target Year</label>
-                            <input type="number" id="txtCostWeightF" name="txtCostWeightF" style="width:10%"> %
+                            <input type="number" id="txtCostWeightS" name="txtCostWeightS" style="width:10%"> %
                             <br>
                             <label style="width: 10%; color: green;font-weight: bold">Constrction Time</label>
-                            <input type="number" id="txtinitialcostF" name="txtinitialcostF" style="width:10%"> $/m
+                            <input type="number" id="txtinitialcostS" name="txtinitialcostS" style="width:10%"> $/m
                             <br>
                             <label style="width: 10%; color: green;font-weight: bold">Time weight</label>
-                            <input type="number" id="txtConstructionCostF" name="txtConstructionCostF" style="width:10%"> $/m
+                            <input type="number" id="txtConstructionCostS" name="txtConstructionCostS" style="width:10%" disabled> $/m
                             <button type="button" id="btncalculateCostByExp" style="background-color: cornsilk;width:10%">Next</button>
                         </div>
                     </div>
