--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
                     $('#initialcostresult').val(result);
                 });
                 $("#btncalculateCostByExp").click(function () {
+                    debugger;
                     document.getElementById("divmain").style.visibility = "visible"
                     var costWeight = $("#txtCostWeightF").val();  
                     var constructionCostF = $("#txtConstructionCostF").val();  
