--- a/index.html
+++ b/index.html
@@ -468,7 +468,8 @@
                     total = Number(costWeight) + Number(constructionCostF) + Number(MaintanaceCostF);
                     total = total/30 ;                                            
                                                                      
-                    $('#txtCostWeight').val(total);                                 
+                    $('#txtCostWeight').val(total);    
+                     $('#txtCostWeightF').val(total);                                                 
                 });
                                                                                    
                 $("#btnprojectvalue").click(function () {
