--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <input type="number" id="txtMaintanaceCostF" name="txtMaintanaceCostF" style="width:10%"> $/m
         <br>
         <label style="width: 10%;color: green;font-weight: bold">cost weight</label>
-        <input type="number" id="txtCostWeightF" name="txtCostWeightF" style="width:10%"  disabled> $/m
+        <input type="number" id="txtCostWeightFF" name="txtCostWeightFF" style="width:10%"  disabled> $/m
     </div>
 </div>
     <br>
@@ -469,7 +469,7 @@
                     total = total/30 ;                                            
                                                                      
                     $('#txtCostWeight').val(total);    
-                     $('#txtCostWeightF').val(total);                                                 
+                     $('#txtCostWeightFF').val(total);                                                 
                 });
                                                                                    
                 $("#btnprojectvalue").click(function () {
