--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                                     <br>
                                     <div name="divCost" id="divCost">
                                         <label style="width:30%">Cost weight</label>
-                                        <input type="text" id="txtCostWeight" name="txtCostWeight" style="width:30%"> %
+                                        <input type="text" id="txtCostWeight" name="txtCostWeight" style="width:30%" disabled> %
                                         <br>
                                         <label style="width:30%">Initial</label>
                                         <input type="text" id="txtinitialcost" name="txtinitialcost" style="width:30%"> $/m
