--- a/index.html
+++ b/index.html
@@ -475,8 +475,8 @@
                                                                                           
                      $('#txtCostWeight').val(total);    
                      $('#txtCostWeightFF').val(total);      
-                     $('#txtConstructionCostS').val(total); 
-                     $('#timewight').val(total);                                  
+                     $('#txtConstructionCostS').val(timetotal); 
+                     $('#timewight').val(timetotal);                                  
                 });
                                                                                    
                 $("#btnprojectvalue").click(function () {
