--- a/index.html
+++ b/index.html
@@ -197,21 +197,22 @@
             <div style="background-color:oldlace">
                 <h6 style="color:blue">Enviroment</h6>
                 <label style="width:50%">Noise pollution:</label>
-                <input type="text" id="txtnoisePercentage" name="txtnoisePercentage" style="width:20%"> %
+                <input type="text" id="txtnoisebyExp" name="txtnoisebyExp" style="width:20%">
                 <br>
                 <label style="width:50%">Air pollution:</label>
-                <input type="text" id="txtairPercentage" name="txtairPercentage" style="width:20%"> %
+                <input type="text" id="txtairbyExp" name="txtairbyExp" style="width:20%">
                 <br>
                 <label style="width:50%">Soil pollution:</label>
-                <input type="text" id="txtsoilPercentage" name="txtsoilPercentage" style="width:20%"> %
+                <input type="text" id="txtsoilbyExp" name="txtsoilbyExp" style="width:20%">
                 <br>
-                <label style="width:50%">Heat pollution:</label><input type="text" id="txtheat" name="txtheat" style="width:20%">
-                <input type="text" id="txtheatPercentage" name="txtheatPercentage" style="width:20%"> %
+                <label style="width:50%">Heat pollution:</label>
+                <input type="text" id="txtheatbyExp" name="txtheatbyExp" style="width:20%">
                 <br>
                 <label style="width:49%">Ground water pollution:</label>
-                <input type="text" id="txtgroundwater" name="txtgroundwater" style="width:20%">
-                <input type="text" id="txtgroundwaterPercentage" name="txtgroundwaterPercentage" style="width:20%">
-
+                <input type="text" id="txtgroundwaterbyExp" name="txtgroundwaterbyExp" style="width:20%">
+                <br>
+                <label style="width:49%">Optical pollution:</label>
+                <input type="text" id="txOpticalbyExp" name="txtOpticalbyExp" style="width:20%">
             </div>
                </div>
         <br>
