--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
        <div style="background-color:oldlace" >
                         <div name="divCostSecondStep" id="divCostFirstStep">
                             <label style="width:10%;color:green;font-weight:bold">Target Year</label>
-                            <input type="number" id="txtCostWeightS" name="txtCostWeightS" style="width:10%"> %
+                            <input type="number" id="txtCostWeightS" name="txtCostWeightS" style="width:10%"> 
                             <br>
                             <label style="width: 10%; color: green;font-weight: bold">Constrction Time</label>
                             <input type="number" id="txtinitialcostS" name="txtinitialcostS" style="width:10%"> $/m
@@ -191,28 +191,27 @@
                             <button type="button" id="btncalculateCostByExp" style="background-color: cornsilk;width:10%">Next</button>
                         </div>
                     </div>
-        <br>
-          
+        <br> 
         <div id="ThirdStep" class="container">
             <div style="background-color:oldlace">
                 <h6 style="color:blue">Enviroment</h6>
-                <label style="width:50%">Noise pollution:</label>
-                <input type="text" id="txtnoisebyExp" name="txtnoisebyExp" style="width:20%">
+                <label style="width:10%;color:green;font-weight:bold">Noise pollution:</label>
+                <input type="number" id="txtnoisebyExp" name="txtnoisebyExp" style="width:10%">
                 <br>
-                <label style="width:50%">Air pollution:</label>
-                <input type="text" id="txtairbyExp" name="txtairbyExp" style="width:20%">
+                <label style="width:10%;color:green;font-weight:bold">Air pollution:</label>
+                <input type="number" id="txtairbyExp" name="txtairbyExp" style="width:10%">
                 <br>
-                <label style="width:50%">Soil pollution:</label>
-                <input type="text" id="txtsoilbyExp" name="txtsoilbyExp" style="width:20%">
+                <label style="width:10%;color:green;font-weight:bold">Soil pollution:</label>
+                <input type="number" id="txtsoilbyExp" name="txtsoilbyExp" style="width:10%">
                 <br>
-                <label style="width:50%">Heat pollution:</label>
-                <input type="text" id="txtheatbyExp" name="txtheatbyExp" style="width:20%">
+                <label style="width:10%;color:green;font-weight:bold">Heat pollution:</label>
+                <input type="number" id="txtheatbyExp" name="txtheatbyExp" style="width:10%">
                 <br>
-                <label style="width:49%">Ground water pollution:</label>
-                <input type="text" id="txtgroundwaterbyExp" name="txtgroundwaterbyExp" style="width:20%">
+                <label style="width:10%;color:green;font-weight:bold">Ground water pollution:</label>
+                <input type="number" id="txtgroundwaterbyExp" name="txtgroundwaterbyExp" style="width:10%">
                 <br>
-                <label style="width:49%">Optical pollution:</label>
-                <input type="text" id="txOpticalbyExp" name="txtOpticalbyExp" style="width:20%">
+                <label style="width:10%;color:green;font-weight:bold">Optical pollution:</label>
+                <input type="number" id="txOpticalbyExp" name="txtOpticalbyExp" style="width:10%">
             </div>
                </div>
         <br>
