--- a/index.html
+++ b/index.html
@@ -193,25 +193,25 @@
                     </div>
         <br> 
         <div id="ThirdStep" class="container">
-            <div style="background-color:oldlace">
+            <div style="background-color:oldlace;float:left">
                 <h6 style="color:blue">Enviroment</h6>
                 <label style="width:10%;color:green;font-weight:bold">Noise pollution:</label>
-                <input type="number" id="txtnoisebyExp" name="txtnoisebyExp" style="width:10%">
+                <input type="number" id="txtnoisebyExp" name="txtnoisebyExp" style="width:10%">(1 -5)
                 <br>
                 <label style="width:10%;color:green;font-weight:bold">Air pollution:</label>
-                <input type="number" id="txtairbyExp" name="txtairbyExp" style="width:10%">
+                <input type="number" id="txtairbyExp" name="txtairbyExp" style="width:10%">(1 -5)
                 <br>
                 <label style="width:10%;color:green;font-weight:bold">Soil pollution:</label>
-                <input type="number" id="txtsoilbyExp" name="txtsoilbyExp" style="width:10%">
+                <input type="number" id="txtsoilbyExp" name="txtsoilbyExp" style="width:10%">(1 -5)
                 <br>
                 <label style="width:10%;color:green;font-weight:bold">Heat pollution:</label>
-                <input type="number" id="txtheatbyExp" name="txtheatbyExp" style="width:10%">
+                <input type="number" id="txtheatbyExp" name="txtheatbyExp" style="width:10%">(1 -5)
                 <br>
                 <label style="width:10%;color:green;font-weight:bold">Ground water pollution:</label>
-                <input type="number" id="txtgroundwaterbyExp" name="txtgroundwaterbyExp" style="width:10%">
+                <input type="number" id="txtgroundwaterbyExp" name="txtgroundwaterbyExp" style="width:10%">(1 -5)
                 <br>
                 <label style="width:10%;color:green;font-weight:bold">Optical pollution:</label>
-                <input type="number" id="txOpticalbyExp" name="txtOpticalbyExp" style="width:10%">
+                <input type="number" id="txOpticalbyExp" name="txtOpticalbyExp" style="width:10%">(1 -5)
             </div>
                </div>
         <br>
