--- a/index.html
+++ b/index.html
@@ -196,22 +196,22 @@
             <div style="background-color:oldlace;float:left">
                 <h6 style="color:blue">Enviroment</h6>
                 <label style="width:10%;color:green;font-weight:bold">Noise pollution:</label>
-                <input type="number" id="txtnoisebyExp" name="txtnoisebyExp" style="width:10%">(1 -5)
+                <input type="number" id="txtnoisebyExp" name="txtnoisebyExp" style="width:10%"><label>(1-5)</label>
                 <br>
                 <label style="width:10%;color:green;font-weight:bold">Air pollution:</label>
-                <input type="number" id="txtairbyExp" name="txtairbyExp" style="width:10%">(1 -5)
+                <input type="number" id="txtairbyExp" name="txtairbyExp" style="width:10%"><label>(1-5)</label>
                 <br>
                 <label style="width:10%;color:green;font-weight:bold">Soil pollution:</label>
-                <input type="number" id="txtsoilbyExp" name="txtsoilbyExp" style="width:10%">(1 -5)
+                <input type="number" id="txtsoilbyExp" name="txtsoilbyExp" style="width:10%"><label>(1-5)</label>
                 <br>
                 <label style="width:10%;color:green;font-weight:bold">Heat pollution:</label>
-                <input type="number" id="txtheatbyExp" name="txtheatbyExp" style="width:10%">(1 -5)
+                <input type="number" id="txtheatbyExp" name="txtheatbyExp" style="width:10%"><label>(1-5)</label>
                 <br>
                 <label style="width:10%;color:green;font-weight:bold">Ground water pollution:</label>
-                <input type="number" id="txtgroundwaterbyExp" name="txtgroundwaterbyExp" style="width:10%">(1 -5)
+                <input type="number" id="txtgroundwaterbyExp" name="txtgroundwaterbyExp" style="width:10%"><label>(1-5)</label>
                 <br>
                 <label style="width:10%;color:green;font-weight:bold">Optical pollution:</label>
-                <input type="number" id="txOpticalbyExp" name="txtOpticalbyExp" style="width:10%">(1 -5)
+                <input type="number" id="txOpticalbyExp" name="txtOpticalbyExp" style="width:10%"><label>(1-5)</label>
             </div>
                </div>
         <br>
