--- a/index.html
+++ b/index.html
@@ -215,23 +215,20 @@
             </div>
             <div style="background-color:oldlace;float:left">
                 <h6 style="color:blue">Efficiency</h6>
-                <label style="width:30%;color:green;font-weight:bold">Noise pollution:</label>
-                <input type="number" id="txtnoisebyExp" name="txtnoisebyExp" style="width:20%"><label>(1-5)</label>
+                <label style="width:30%;color:green;font-weight:bold">Performance:</label>
+                <input type="number" id="txtPerformancebyExp" name="txtPerformancebyExp" style="width:20%"><label>(1-5)</label>
                 <br>
-                <label style="width:30%;color:green;font-weight:bold">Air pollution:</label>
-                <input type="number" id="txtairbyExp" name="txtairbyExp" style="width:20%"><label>(1-5)</label>
+                <label style="width:30%;color:green;font-weight:bold">Quality:</label>
+                <input type="number" id="txtQualitybyExp" name="txtQualitybyExp" style="width:20%"><label>(1-5)</label>
                 <br>
-                <label style="width:30%;color:green;font-weight:bold">Soil pollution:</label>
-                <input type="number" id="txtsoilbyExp" name="txtsoilbyExp" style="width:20%"><label>(1-5)</label>
+                <label style="width:30%;color:green;font-weight:bold">Durability:</label>
+                <input type="number" id="txtDurabilitybyExp" name="txtDurabilitybyExp" style="width:20%"><label>(1-5)</label>
                 <br>
-                <label style="width:30%;color:green;font-weight:bold">Heat pollution:</label>
-                <input type="number" id="txtheatbyExp" name="txtheatbyExp" style="width:20%"><label>(1-5)</label>
+                <label style="width:30%;color:green;font-weight:bold">Abitily to construct:</label>
+                <input type="number" id="txtAbilitybyExp" name="txtAbilitybyExp" style="width:20%"><label>(1-5)</label>
                 <br>
-                <label style="width:30%;color:green;font-weight:bold">Ground water pollution:</label>
-                <input type="number" id="txtgroundwaterbyExp" name="txtgroundwaterbyExp" style="width:20%"><label>(1-5)</label>
-                <br>
-                <label style="width:30%;color:green;font-weight:bold">Optical pollution:</label>
-                <input type="number" id="txOpticalbyExp" name="txtOpticalbyExp" style="width:20%"><label>(1-5)</label>
+                <label style="width:30%;color:green;font-weight:bold">Value weight:</label>
+                <input type="number" id="txtValueweightbyExp" name="txtValueweighbyExp" style="width:20%"><label>(1-5)</label>
             </div>
         </div>
         <br>
