--- a/index.html
+++ b/index.html
@@ -194,23 +194,23 @@
         <br> 
         <div id="ThirdStep" class="container">
             <div style="background-color:oldlace;float:left">
-                <h6 style="color:blue">Enviroment</h6>
-                <label style="width:30%;color:green;font-weight:bold">Noise pollution:</label>
+                <h6 style="color:blue">Enviroment pollution</h6>
+                <label style="width:30%;color:green;font-weight:bold">Noise:</label>
                 <input type="number" id="txtnoisebyExp" name="txtnoisebyExp" style="width:20%"><label>(1-5)</label>
                 <br>
-                <label style="width:30%;color:green;font-weight:bold">Air pollution:</label>
+                <label style="width:30%;color:green;font-weight:bold">Air:</label>
                 <input type="number" id="txtairbyExp" name="txtairbyExp" style="width:20%"><label>(1-5)</label>
                 <br>
-                <label style="width:30%;color:green;font-weight:bold">Soil pollution:</label>
+                <label style="width:30%;color:green;font-weight:bold">Soil:</label>
                 <input type="number" id="txtsoilbyExp" name="txtsoilbyExp" style="width:20%"><label>(1-5)</label>
                 <br>
-                <label style="width:30%;color:green;font-weight:bold">Heat pollution:</label>
+                <label style="width:30%;color:green;font-weight:bold">Heat:</label>
                 <input type="number" id="txtheatbyExp" name="txtheatbyExp" style="width:20%"><label>(1-5)</label>
                 <br>
-                <label style="width:30%;color:green;font-weight:bold">Ground water pollution:</label>
+                <label style="width:30%;color:green;font-weight:bold">Ground water:</label>
                 <input type="number" id="txtgroundwaterbyExp" name="txtgroundwaterbyExp" style="width:20%"><label>(1-5)</label>
                 <br>
-                <label style="width:30%;color:green;font-weight:bold">Optical pollution:</label>
+                <label style="width:30%;color:green;font-weight:bold">Optical:</label>
                 <input type="number" id="txOpticalbyExp" name="txtOpticalbyExp" style="width:20%"><label>(1-5)</label>
             </div>
             <div style="background-color:oldlace;float:left">
