--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <label style="width:30%;color:green;font-weight:bold">Durability:</label>
                 <input type="number" id="txtDurabilitybyExp" name="txtDurabilitybyExp" style="width:20%"><label>(1-5)</label>
                 <br>
-                <label style="width:30%;color:green;font-weight:bold">Abitily to construct:</label>
+                <label style="width:30%;color:green;font-weight:bold">A.T.C:</label>
                 <input type="number" id="txtAbilitybyExp" name="txtAbilitybyExp" style="width:20%"><label>(1-5)</label>
                 <br>
                 <label style="width:30%;color:green;font-weight:bold">Value weight:</label>
