--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <label style="width:30%;color:green;font-weight:bold">A.T.C:</label>
                 <input type="number" id="txtAbilitybyExp" name="txtAbilitybyExp" style="width:20%"><label>(1-5)</label>
                 <br>
-                <label style="width:30%;color:green;font-weight:bold">Value weight:</label>
+                <label style="width:30%;color:green;font-weight:bold">Weight:</label>
                 <input type="number" id="txtValueweightbyExp" name="txtValueweighbyExp" style="width:20%"><label>(1-5)</label>
             </div>
         </div>
