--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <label style="width:30%;color:green;font-weight:bold">Heat:</label>
                 <input type="number" id="txtheatbyExp" name="txtheatbyExp" style="width:20%"><label>(1-5)</label>
                 <br>
-                <label style="width:30%;color:green;font-weight:bold">Ground water:</label>
+                <label style="width:30%;color:green;font-weight:bold">G.W:</label>
                 <input type="number" id="txtgroundwaterbyExp" name="txtgroundwaterbyExp" style="width:20%"><label>(1-5)</label>
                 <br>
                 <label style="width:30%;color:green;font-weight:bold">Optical:</label>
