--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         </div>
                     </div>
         <br> 
-        <div id="ThirdStep" class="container">
+        <div id="ThirdStep" class="container" style="width:100%">
             <div style="background-color:oldlace;float:left">
                 <h6 style="color:blue">Enviroment pollution</h6>
                 <label style="width:30%;color:green;font-weight:bold">Noise:</label>
