--- a/index.html
+++ b/index.html
@@ -195,16 +195,16 @@
             <div style="background-color:oldlace;float:left">
                 <h6 style="color:blue">Enviroment pollution</h6>
                 <label style="width:30%;color:green;font-weight:bold">Noise:</label>
-                <input type="number" id="txtnoisebyExp" name="txtnoisebyExp" style="width:20%"><label>(1-5)</label>
+                <input type="number" id="txtnoisebyExp" name="txtnoisebyExp" style="width:30%"><label>(1-5)</label>
                 <br>
                 <label style="width:30%;color:green;font-weight:bold">Air:</label>
-                <input type="number" id="txtairbyExp" name="txtairbyExp" style="width:20%"><label>(1-5)</label>
+                <input type="number" id="txtairbyExp" name="txtairbyExp" style="width:30%"><label>(1-5)</label>
                 <br>
                 <label style="width:30%;color:green;font-weight:bold">Soil:</label>
-                <input type="number" id="txtsoilbyExp" name="txtsoilbyExp" style="width:20%"><label>(1-5)</label>
+                <input type="number" id="txtsoilbyExp" name="txtsoilbyExp" style="width:30%"><label>(1-5)</label>
                 <br>
                 <label style="width:30%;color:green;font-weight:bold">Heat:</label>
-                <input type="number" id="txtheatbyExp" name="txtheatbyExp" style="width:20%"><label>(1-5)</label>
+                <input type="number" id="txtheatbyExp" name="txtheatbyExp" style="width:30%"><label>(1-5)</label>
                 <br>
                 <label style="width:30%;color:green;font-weight:bold">G.W:</label>
                 <input type="number" id="txtgroundwaterbyExp" name="txtgroundwaterbyExp" style="width:20%"><label>(1-5)</label>
@@ -212,7 +212,7 @@
                 <label style="width:30%;color:green;font-weight:bold">Optical:</label>
                 <input type="number" id="txOpticalbyExp" name="txtOpticalbyExp" style="width:20%"><label>(1-5)</label>
             </div>
-            <div style="background-color: oldlace; float:right">
+            <div style="background-color: oldlace;">
                 <h6 style="color:blue">Efficiency</h6>
                 <label style="width:30%;color:green;font-weight:bold">Performance:</label>
                 <input type="number" id="txtPerformancebyExp" name="txtPerformancebyExp" style="width:20%"><label>(1-5)</label>
