--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
        <div style="background-color:oldlace" >
                         <div name="divCostSecondStep" id="divCostFirstStep">
                             <label style="width:10%;color:green;font-weight:bold">Target Year</label>
-                            <input type="number" id="txtCostWeightS" name="txtCostWeightS" style="width:10%"> 
+                            <input type="number" id="txtCostWeightS" name="txtCostWeightS" style="width:10%"> <label>(1-10)</label>
                             <br>
                             <label style="width: 10%; color: green;font-weight: bold">Constrction Time</label>
-                            <input type="number" id="txtinitialcostS" name="txtinitialcostS" style="width:10%"> $/m
+                            <input type="number" id="txtinitialcostS" name="txtinitialcostS" style="width:10%"> <label>(1-10)</label>
                             <br>
                             <label style="width: 10%; color: green;font-weight: bold">Time weight</label>
-                            <input type="number" id="txtConstructionCostS" name="txtConstructionCostS" style="width:10%" disabled> $/m
+                            <input type="number" id="txtConstructionCostS" name="txtConstructionCostS" style="width:10%" disabled> %
                         </div>
                     </div>
         <br> 
@@ -212,7 +212,7 @@
                 <label style="width:30%;color:green;font-weight:bold">Optical:</label>
                 <input type="number" id="txOpticalbyExp" name="txtOpticalbyExp" style="width:20%"><label>(1-5)</label>
             </div>
-            <div style="background-color: oldlace;">
+            <div style="background-color: oldlace;float:inline-end">
                 <h6 style="color:blue">Efficiency</h6>
                 <label style="width:30%;color:green;font-weight:bold">Performance:</label>
                 <input type="number" id="txtPerformancebyExp" name="txtPerformancebyExp" style="width:20%"><label>(1-5)</label>
