--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <label style="width:30%;color:green;font-weight:bold">Optical:</label>
                 <input type="number" id="txOpticalbyExp" name="txtOpticalbyExp" style="width:20%"><label>(1-5)</label>
             </div>
-            <div style="background-color: oldlace;float:right">
+            <div style="background-color: oldlace;width:40%">
                 <h6 style="color:blue">Efficiency</h6>
                 <label style="width:30%;color:green;font-weight:bold">Performance:</label>
                 <input type="number" id="txtPerformancebyExp" name="txtPerformancebyExp" style="width:20%"><label>(1-5)</label>
