--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     </div>
         <br> 
         <div id="ThirdStep" class="container" style="width:100%">
-            <div style="background-color:oldlace;float:left">
+            <div style="background-color:oldlace;float:left;width:50%">
                 <h6 style="color:blue">Enviroment pollution</h6>
                 <label style="width:30%;color:green;font-weight:bold">Noise:</label>
                 <input type="number" id="txtnoisebyExp" name="txtnoisebyExp" style="width:30%"><label>(1-5)</label>
@@ -212,7 +212,7 @@
                 <label style="width:30%;color:green;font-weight:bold">Optical:</label>
                 <input type="number" id="txOpticalbyExp" name="txtOpticalbyExp" style="width:20%"><label>(1-5)</label>
             </div>
-            <div style="background-color: oldlace;width:60%">
+            <div style="background-color: oldlace;width:50%">
                 <h6 style="color:blue">Efficiency</h6>
                 <label style="width:30%;color:green;font-weight:bold">Performance:</label>
                 <input type="number" id="txtPerformancebyExp" name="txtPerformancebyExp" style="width:20%"><label>(1-5)</label>
