--- a/index.html
+++ b/index.html
@@ -192,19 +192,19 @@
                     </div>
         <br> 
         <div id="ThirdStep" class="container" style="width:100%">
-            <div style="background-color:oldlace;float:left;width:50%">
+            <div style="background-color:oldlace;float:left">
                 <h6 style="color:blue">Enviroment pollution</h6>
                 <label style="width:30%;color:green;font-weight:bold">Noise:</label>
-                <input type="number" id="txtnoisebyExp" name="txtnoisebyExp" style="width:30%"><label>(1-5)</label>
+                <input type="number" id="txtnoisebyExp" name="txtnoisebyExp" style="width:20%"><label>(1-5)</label>
                 <br>
                 <label style="width:30%;color:green;font-weight:bold">Air:</label>
-                <input type="number" id="txtairbyExp" name="txtairbyExp" style="width:30%"><label>(1-5)</label>
+                <input type="number" id="txtairbyExp" name="txtairbyExp" style="width:20%"><label>(1-5)</label>
                 <br>
                 <label style="width:30%;color:green;font-weight:bold">Soil:</label>
-                <input type="number" id="txtsoilbyExp" name="txtsoilbyExp" style="width:30%"><label>(1-5)</label>
+                <input type="number" id="txtsoilbyExp" name="txtsoilbyExp" style="width:20%"><label>(1-5)</label>
                 <br>
                 <label style="width:30%;color:green;font-weight:bold">Heat:</label>
-                <input type="number" id="txtheatbyExp" name="txtheatbyExp" style="width:30%"><label>(1-5)</label>
+                <input type="number" id="txtheatbyExp" name="txtheatbyExp" style="width:20%"><label>(1-5)</label>
                 <br>
                 <label style="width:30%;color:green;font-weight:bold">G.W:</label>
                 <input type="number" id="txtgroundwaterbyExp" name="txtgroundwaterbyExp" style="width:20%"><label>(1-5)</label>
@@ -212,22 +212,22 @@
                 <label style="width:30%;color:green;font-weight:bold">Optical:</label>
                 <input type="number" id="txOpticalbyExp" name="txtOpticalbyExp" style="width:20%"><label>(1-5)</label>
             </div>
-            <div style="background-color: oldlace;width:50%">
+            <div style="background-color: oldlace;width:60%">
                 <h6 style="color:blue">Efficiency</h6>
                 <label style="width:30%;color:green;font-weight:bold">Performance:</label>
-                <input type="number" id="txtPerformancebyExp" name="txtPerformancebyExp" style="width:20%"><label>(1-5)</label>
+                <input type="number" id="txtPerformancebyExp" name="txtPerformancebyExp" style="width:10%"><label>(1-5)</label>
                 <br>
                 <label style="width:30%;color:green;font-weight:bold">Quality:</label>
-                <input type="number" id="txtQualitybyExp" name="txtQualitybyExp" style="width:20%"><label>(1-5)</label>
+                <input type="number" id="txtQualitybyExp" name="txtQualitybyExp" style="width:10%"><label>(1-5)</label>
                 <br>
                 <label style="width:30%;color:green;font-weight:bold">Durability:</label>
-                <input type="number" id="txtDurabilitybyExp" name="txtDurabilitybyExp" style="width:20%"><label>(1-5)</label>
+                <input type="number" id="txtDurabilitybyExp" name="txtDurabilitybyExp" style="width:10%"><label>(1-5)</label>
                 <br>
                 <label style="width:30%;color:green;font-weight:bold">A.T.C:</label>
-                <input type="number" id="txtAbilitybyExp" name="txtAbilitybyExp" style="width:20%"><label>(1-5)</label>
+                <input type="number" id="txtAbilitybyExp" name="txtAbilitybyExp" style="width:10%"><label>(1-5)</label>
                 <br>
                 <label style="width:30%;color:green;font-weight:bold">Weight:</label>
-                <input type="number" id="txtValueweightbyExp" name="txtValueweighbyExp" style="width:20%"><label>(1-5)</label>
+                <input type="number" id="txtValueweightbyExp" name="txtValueweighbyExp" style="width:10%"><label>(1-5)</label>
                 <br>
                 <button type="button" id="btncalculateCostByExp" style="background-color: cornsilk;width:20%">Next</button>
             </div>
