--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
                     </div>
         <br> 
         <div id="ThirdStep" class="container" style="width:100%">
+            <label style="width:100%;color:indianred;font-weight:bold">
+                This questionaire is to be filled out by expertise in the field, the evaluation from (1-5) where 1 is the minimum weight and 5 is the maximum
+            </label>
             <div style="background-color:oldlace;float:left">
                 <h6 style="color:blue">Enviroment pollution</h6>
                 <label style="width:30%;color:green;font-weight:bold">Noise:</label>
